public/css/style.css
/* Colors Used 

Black-primary = #3d3d3d
Black-secondary = #4b4b4b
Blue-Primary = #7158e2
Blue-Secondary = #7d5fff

*/

/* GLOBAL CSS */

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html,
body {
  font-size: 62.5%;
  background-image: linear-gradient(#354fc0, #7158e2);
  /* background-image: radial-gradient(#7158e2, #7d5fff); */
  color: #fff;
  text-rendering: optimizeLegibility;
  overflow: hidden;
  line-height: 1.7;
  font-family: 'Lato', sans-serif;
  padding: 0.4%;
  font-weight: 300;
  background-position: center;
  background-size: cover;
  height: 100vh;
}

body {
  font-size: 1.6rem;
}

html:focus {
  outline: none;
}

body:focus {
  outline: none;
}

@media only screen and (max-width: 1200px) {
  html {
    font-size: 56.25%;
  }
}

@media only screen and (max-width: 1000px) {
  html {
    font-size: 48%;
  }
}

@media only screen and (max-width: 780px) {
  html {
    font-size: 40%;
  }
}

@media only screen and (min-width: 1800px) {
  html {
    font-size: 75%;
  }
}

/* SCROLLBAR EDITING */

::-webkit-scrollbar {
  width: 1rem;
}

/* Track */
::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px #434343;
  border-radius: 10px;
}

/* Handle */
::-webkit-scrollbar-thumb {
  background: #000000; /* fallback for old browsers */ /* Chrome 10-25, Safari 5.1-6 */
  background: linear-gradient(
    to right,
    #434343,
    #000000
  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */

  border-radius: 10px;
}

/* Reusable Components */

.row {
  max-width: 1140px;
  margin: 0 auto;
}

.clearfix::after {
  content: '';
  display: table;
  clear: both;
}

.alert {
  position: fixed;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  z-index: 9999;
  color: #fff;
  font-size: 1.8rem;
  font-weight: 400;
  text-align: center;
  border-bottom-left-radius: 5px;
  border-bottom-right-radius: 5px;
  padding: 1.6rem 15rem;
  box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.25);
  background-color: rgba(61, 61, 61, 0.8);
}

.alert--success {
  color: #20bf6b;
}
.alert--error {
  color: #eb4d4b;
}
/* Links and Buttons */

a {
  text-decoration: none;
  color: #c5c5c5;
}

.routeRoom {
  width: 100%;
  display: inline-flex;
  color: #c5c5c5;
}

.btn {
  text-decoration: none;
  margin-right: 2.2rem;
  color: #7158e2;
  display: block;
  background-color: #1f1f1f;
  margin-top: 1.5rem;
  border-radius: 20rem;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-top: 0.8rem;
  padding-bottom: 0.8rem;
  font-size: 1.8rem;
  font-weight: 400;
  box-shadow: 0 0.2rem 0.5rem #7158e2;
  cursor: pointer;
  transform: translateY(-0.3rem);
  transition: all 0.3s;
}

.btn:active {
  transform: translateY(0) scale(0.95);
}

.btn:active,
.btn:hover,
.btn {
  border: none;
  outline: none;
}

/* HEADER */

.header,
.header--mobile {
  background-color: #292929;
  height: 7rem;
  border-top-left-radius: 1.3rem;
  border-top-right-radius: 1.3rem;
}

.header__logoBox {
  float: left;
  padding: 0.5%;
}

@media only screen and (max-width: 1180px) {
  .header__logoBox {
    margin-left: 1rem;
  }
}

.header__logo {
  height: 5rem;
}

.header__contentBox {
  float: right;
  display: flex;
  flex-direction: row;
  /* margin-right: -16rem; */
}

.header__createButtonBox {
  float: left;
  margin: 0 auto;
  margin-left: 35rem;
}

@media only screen and (max-width: 1200px) {
  .header__createButtonBox {
    margin-left: 39rem;
  }
}

@media only screen and (max-width: 1124px) {
  .header__createButtonBox {
    margin-left: 34rem;
  }
}

@media only screen and (max-width: 1030px) {
  .header__createButtonBox {
    margin-left: 29rem;
  }
}

@media only screen and (max-width: 1000px) {
  .header__createButtonBox {
    margin-left: 39rem;
  }
}

@media only screen and (max-width: 900px) {
  .header__createButtonBox {
    margin-left: 34rem;
  }
}

@media only screen and (max-width: 830px) {
  .header__createButtonBox {
    margin-left: 27rem;
  }
}

@media only screen and (max-width: 780px) {
  .header__createButtonBox {
    margin-left: 34rem;
  }
}

@media only screen and (max-width: 700px) {
  .header__createButtonBox {
    margin-left: 30rem;
  }
}

@media only screen and (max-width: 620px) {
  .header__createButtonBox {
    margin-left: 22rem;
  }
}

/* Section AppContainer */

.main {
  height: 100vh;
}

.appContainer {
  background-color: #3d3d3d;
  width: 100%;
  height: 85vh;
  margin: 0 auto;
  display: flex;
  border-top: 3px solid rgb(22, 22, 22);
  border-bottom-left-radius: 1.3rem;
  border-bottom-right-radius: 1.3rem;
}

/* .appContainer--mobile {
  background-color: red;
} */

.appContainer__left--20 {
  background-color: #292929;
  width: 20%;
  border-bottom-left-radius: 1.3rem;
  overflow: hidden;
}

.appContainer__right--20 {
  background-color: #292929;
  width: 20%;
  overflow: hidden;
  border-bottom-right-radius: 1.3rem;
}

.appContainer__mid--60 {
  width: 60%;
  border-left: 3px solid #202020;
  border-right: 3px solid #202020;
  overflow: auto;
}

#input__search {
  margin: 5%;
  width: 90%;
  border-radius: 0.8rem;
  padding: 0.5rem 0.9rem 0.5rem 3.4rem;
  border: 2px solid #202020;
  background-color: #202020;
  color: rgb(109, 108, 108);
  font-weight: 400;
  background-image: url(/img/utils/search.png);
  background-size: 2.4rem;
  background-repeat: no-repeat;
  background-position: left;
}

#input__search:active,
#input__search:hover,
#input__search {
  outline: none;
}

.groupLogo {
  height: 30px;
  display: inline-block;
  border-radius: 50%;
  margin-right: 1.5rem;
}

.searchReslt {
  display: flex;
  flex-direction: row;
  margin-bottom: 1.5rem;
  cursor: pointer;
  font-weight: 100;
}

.appContainer__left--20--searchResults,
.appContainer__left--20--joinedGroups {
  padding: 6%;
  overflow: auto;
  height: 45%;
  width: 100%;
}

.appContainer__left--20--searchResults {
  position: relative;
}

.groupTitle {
  display: inline-block;
  margin-bottom: 0.5rem;
  color: #6e6c6c;
  margin-left: 2rem;
}
/* ... */

